# Kuznecov-tasks

./: README.rst
CompruterVision/: .gitignore  .travis.yml  README.rst  base.py  orb.py  requirements.txt  setup.cfg  setup.py  task1.py  task2.py  task_blending.py  task_blur.py  task_canny.py  task_face.py  task_orb.py  tox.ini
CompruterVision/keras/: README.md  loading_net_mnist.py  mnist.py  saving_net_mnist.py
Information Retrieval/task_1/: README.rst  task_1.py  task_1_easy_way.py  task_1_gramms.py  words.txt
Information Retrieval/task_2/: .gitignore  Result.csv  get_diagram.txt  pom.xml
Information Retrieval/task_2/ranging/: rating.txt
Information Retrieval/task_2/robot_cache/: cache.txt
Information Retrieval/task_2/src/main/java/com/lungesoft/larch/: LuceneTest.java  SearchRobot.java  ZipfLaw.java  Zipf_law.java
Information Retrieval/task_2/src/main/java/com/lungesoft/larch/models/: Data.java  Factors.java  News.java  ResponseList.java
Information Retrieval/task_2/src/main/java/com/lungesoft/larch/ranging/: LinearRegression.java  QualityСontrol.java  Ranging.java  Upgrade.java
Software Technology/task1/: task1.py  weatherdb_create.sql  weatherdb_insert2.sql
Software Technology/task2/task2/: settings.py  urls.py  wsgi.py
Software Technology/task4/src/main/java/: zkSimpleLock.java
task1/: weatherdb_init.sql  weatherdb_insert1.sql
task2/: db.sqlite3  manage.py
task2/task2_app/: models.py  serializers.py  urls.py  views.py
task2/task2_app/migrations/: 0001_initial.py
task3/: receive.py  send.rb
task4/: pom.xml
(+12 files in other folders)
